<resources>
    <string name="app_name">FED</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">FED - Fertile Infertile Egg Detector</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerbutton">Register</string>
    <string name="sign_inbutton">Sign In</string>
    <string name="registertitle">Register.</string>
    <string name="logintitle">Login.</string>
    <string name="sign_in_or_register_nto_continue">Sign in or Register \nto continue</string>
    <string name="welcometofed">Welcome to \nFED</string>
    <string name="capture_egg">Capture Egg</string>
    <string name="setting">Setting</string>
    <string name="searchbartext">Search Pictures</string>
    <string name="recents">Recents</string>
    <string name="dateexample">Oct 8, 2023 9:25PM</string>
    <string name="library">Library</string>
    <string name="name">Name</string>
    <string name="forgottitle">Forgot Password</string>
    <string name="send_email">We\'ll send you code to your email</string>
    <string name="send_code">Send Code</string>
    <string name="forgot">Forgot Password? Reset Now</string>
    <string name="appereances">Appearances</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="darkmode_desc">Turn On Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_desc">Configure Notifications</string>
    <string name="languages">Languages</string>
    <string name="language_desc">Change Language</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacypolicy_desc">Application Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="profile">Configure Display Profile</string>
    <string name="profile_desc">Change Profile Picture, Name</string>
    <string name="configure_account">Configure Account</string>
    <string name="account_desc">Change Email and Password</string>
    <string name="welcome_back">Welcome Back, %1$s</string>
    <string name="choose_image_source">Choose Image Source</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failed_to_obtain_image">Failed to Obtain Image</string>
    <string name="set_image_name">Set Image Name</string>
    <string name="login_success">Hi Welcome</string>
    <string name="loginfailed">Login Failed, %1$s</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Bahasa Indonesia</item>
    </string-array>
    <string name="language">Language</string>
    <string name="confirm_password">Confirm Your Password</string>
    <string name="invalid_password">Password should not be empty</string>
    <string name="invalid_confirmPassword">Passwords do not match</string>
    <string name="invalid_email">Email should not be empty</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="ed_nameProfile">Profile Name</string>
    <string name="nama_label">Name</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="change_profile">Change Picture</string>
    <string name="konfirmasi">Confirm</string>
    <string name="konfirmasi_message">\"Are you sure you want to change it?\"</string>
    <string name="password_lama">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="password_minimal_characters">password must be more than 6</string>
    <string name="email_tidak_valid">Invalid email</string>
    <string name="new_email">New Email</string>
    <string name="error">Cannoooooooot...</string>
    <string name="choose_gallery">Choose From Galery</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_image_source">Select Image</string>
</resources>