<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setting.configureprofile.ConfigureProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePicture"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/tv_changeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_profile"
        android:textColor="@color/md_theme_dark_onPrimary"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_label"
        android:textColor="@color/md_theme_dark_onPrimary"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedcornerwithstroke"
        android:padding="15dp"
        android:inputType="text"
        android:contentDescription="@string/email"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/black"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        style="@style/BlackButtonBackground"
        android:background="@drawable/roundedcornerbackground"
        android:text="@string/Save"
        android:textAllCaps="false"
        android:layout_marginTop="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:textColor="@color/md_theme_dark_background"
        android:background="@drawable/roundedcornerwithstroke"
        style="@style/TransparentButtonBackground"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>
