<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottomsheetdialogbg">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logintitle"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_dark_background"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="83dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/emailEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcornerwithstroke"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:drawableStart="@drawable/emailicon"
            android:drawablePadding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:startIconDrawable="@drawable/passwordicon"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedcornerwithstroke"
                android:padding="20dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/passwordicon"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BlackButtonBackground"
            android:background="@drawable/roundedcornerbackground"
            android:text="@string/sign_inbutton"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:focusable="true" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerbutton"
            style="@style/TransparentButtonBackground"
            android:textColor="@color/md_theme_dark_background"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp" />

        <TextView
            android:id="@+id/forgetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"/>


    </LinearLayout>

</RelativeLayout>