<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheetdialogbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgottitle"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_dark_onPrimary"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="83dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:textColor="@color/md_theme_dark_onPrimary"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/md_theme_dark_onPrimary"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/emailEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcornerwithstroke"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:contentDescription="@string/email"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_send_email"
            android:drawablePadding="10dp"/>

        <Button
            android:id="@+id/buttonSendLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/BlackButtonBackground"
            android:background="@drawable/roundedcornerbackground"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="85dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp" />

    </LinearLayout>

</RelativeLayout>